Update homepage url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "taydunworth",
-  "homepage": "http://tayloracox.github.io/taydunworth",
+  "homepage": "https://taydunworth.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
