Switches from Tay to Taylor throughout site

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "taydunworth",
-  "homepage": "https://taydunworth.com",
+  "name": "taylordunworth",
+  "homepage": "https://taylordunworth.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
