Updates README with basic instructions

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Tay Dunworth",
-  "name": "Tay Dunworth's Design and Development Portfolio",
+  "short_name": "Taylor Dunworth",
+  "name": "Taylor Dunworth's Design and Development Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
