--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.5.1",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
+    "react-codepen-prefill-embed": "^0.0.2",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
